# sdk-zephyr

./: .clang-format  .editorconfig  .gitignore
boards/arm/nrf9160dk_nrf52840/: nrf9160dk_nrf52840-pinctrl.dtsi  nrf9160dk_nrf52840.dts  nrf9160dk_nrf52840_defconfig
boards/arm/nrf9160dk_nrf9160/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160_common-pinctrl.dtsi  nrf9160dk_nrf9160_defconfig  nrf9160dk_nrf9160_ns.dts  nrf9160dk_nrf9160_ns_defconfig  tracing_string_format_test.c  uart_ble.c  (+1 more)
samples/sensor/p3_poc/: CMakeLists.txt  Kconfig  overlay-carrier.conf  prj.conf  sample.yaml
samples/sensor/p3_poc/certs/: ca.crt
samples/sensor/p3_poc/src/: buzzer.c  fota_update.c  main.c  uart.c
samples/sensor/p3_poc/src/drivers/: iis2dlpc_reg.c  shtc3.c
samples/sensor/p3_poc/src/include/: buzzer.h  eeprom.h  fota_update.h  uart.h
samples/sensor/p3_poc/src/include/drivers/: shtc3.h
samples/sensor/protec3/: CMakeLists.txt  Kconfig  prj.conf
samples/sensor/protec3/certs/: client.crt  client.key
samples/sensor/protec3/doc/: Readme.txt  mqtt_simple_modified.rar
samples/sensor/protec3/src/: adp536x-mod.h  apn.c  apn.h  aws.c  aws.h  bme280.c  buzzer.c  buzzer.h  eeprom.h  fota_update.c  fota_update.h  gpio_t.c  gpio_t.h  iis2dlpc.c  iis2dlpc.h  lte_link.c  main.c  main.h  mqtt_handler.c  mqtt_handler.h  notify_sms.c  shtc3.c  shtc3.h  uart.c  uart.h
samples/sensor/protec3/src/BME280_driver-bme280_v3.5.0/: README.md
samples/sensor/protec3/src/shtc3/: main.c  shtc3.c
samples/sensor/protec3/src/shtc3/Source/: i2c_hal.c  i2c_hal.h  shtc3.c  shtc3.h  system.c  system.h
(+10 files in other folders)
